2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* doc/hildon-libs.types: Add missing types
	* doc/hildon-libs-docs.sgml: Add missing links and some organization
	* doc/tmpl/*: Regenerate and add new files

2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* doc/Makefile.am: 
	* doc/hildon-libs-docs.xml: rename to hildon-libs-docs.sgml

2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* doc/tmpl/hildon-wizard-dialog.sgml: Fix unmatching tags
	* doc/Makefile.am: Ignore right files with IGNORE_HFILES

2006-03-13  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* autogen.sh
	* configure.ac
	* doc/Makefile.am: Update gtk-doc framework bits
	* gtk-doc.make (commit generated file)
	* doc/hildon-libs-overrides.txt (add empty file for gtk-doc 1.1) 

2006-03-13  Johan Bilien  <johan.bilien@nokia.com>
	* hildon-widgets/hildon-code-dialog.c:
	  - Add default title
	  - Fix l10n

2006-03-07  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c: propagate key-press event to the
	  parent class (Closes N#23400)
	* configure.ac: 0.12.3

2006-03-06  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-wizard-dialog.[ch]: Add page_change signal. Patch courtesy
	  of Artem Garmash 
	* configure.ac: 0.12.2

2006-03-02  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-code-dialog.[ch], hildon-widgets/Makefile.am:
	  added HildonCodeDialog widget

2006-03-02  Johan Bilien  <johan.bilien@nokia.com>

	* hildon-widgets/hildon-window.c: 
	  - set the toolbar height explicitely
	  - use show instead of show_all on the common_toolbar
	  - add the toolbars bottom-up instead of top-down
	* hildon-widgets/hildon-program.c:
	  - don't assume that a window was realized when added to 
	    the program

2006-02-21  Luc Pionchon  <luc.pionchon@nokia.com>

        Added hildon-banner, as a clean replacement for gtk-infoprint
	* hildon-widgets/hildon-banner.[ch]: implementation and header	